--- a/exercicio4/index.html
+++ b/exercicio4/index.html
@@ -12,18 +12,33 @@
     </header>
     
     <main>
-        <p>Clube Atlético Mineiro: Mais que um Time, uma Paixão que Transcende Gerações
+        <h2>Clube Atlético Mineiro: Mais que um Time, uma Paixão que Transcende Gerações
 
-Quando falamos do futebol brasileiro, é impossível não destacar o Clube Atlético Mineiro como uma das instituições mais emblemáticas e respeitadas do país. Fundado em 1908, o Galo não é apenas um time: é um símbolo de raça, superação e amor incondicional de sua apaixonada torcida. O Atlético é a tradução viva do espírito mineiro — resiliente, determinado e vibrante.
+            Quando falamos do futebol brasileiro, é impossível não destacar o Clube Atlético Mineiro como uma das instituições mais emblemáticas e respeitadas do país. Fundado em 1908, o Galo não é apenas um time: é um símbolo de raça, superação e amor incondicional de sua apaixonada torcida. O Atlético é a tradução viva do espírito mineiro — resiliente, determinado e vibrante.
 
-Poucos clubes possuem uma história tão rica e marcada por momentos épicos quanto o Galo. Da inesquecível conquista da Copa Libertadores de 2013 ao domínio nacional com títulos como o Campeonato Brasileiro de 2021 e a Copa do Brasil do mesmo ano, o Atlético coleciona glórias que honram sua camisa preta e branca. Mas o mais impressionante é que, para o atleticano, o amor pelo clube não depende de troféus — é uma fé enraizada, quase religiosa.
+            Poucos clubes possuem uma história tão rica e marcada por momentos épicos quanto o Galo. Da inesquecível conquista da Copa Libertadores de 2013 ao domínio nacional com títulos como o Campeonato Brasileiro de 2021 e a Copa do Brasil do mesmo ano, o Atlético coleciona glórias que honram sua camisa preta e branca. Mas o mais impressionante é que, para o atleticano, o amor pelo clube não depende de troféus — é uma fé enraizada, quase religiosa.
 
-O Estádio Arena MRV representa não só a modernização do clube, mas também um novo capítulo na história alvinegra. Uma casa à altura de sua grandeza, construída com suor, orgulho e o apoio incansável da torcida — a Massa — que não mede esforços para empurrar o time, seja nos momentos de festa ou de dificuldade.
+            O Estádio Arena MRV representa não só a modernização do clube, mas também um novo capítulo na história alvinegra. Uma casa à altura de sua grandeza, construída com suor, orgulho e o apoio incansável da torcida — a Massa — que não mede esforços para empurrar o time, seja nos momentos de festa ou de dificuldade.
 
-Do talento inesquecível de Reinaldo à liderança atual de ídolos como Hulk, o Atlético é celeiro de craques, revelações e personagens históricos que ajudaram a escrever as páginas mais emocionantes do futebol nacional. E quem já ouviu o grito de "Gaaaalo!" ecoar por um estádio lotado, sabe que ali pulsa algo diferente, algo sagrado.
+            Do talento inesquecível de Reinaldo à liderança atual de ídolos como Hulk, o Atlético é celeiro de craques, revelações e personagens históricos que ajudaram a escrever as páginas mais emocionantes do futebol nacional. E quem já ouviu o grito de "Gaaaalo!" ecoar por um estádio lotado, sabe que ali pulsa algo diferente, algo sagrado.
 
-O Atlético Mineiro é mais do que futebol. É identidade, é resistência, é emoção. É o Galo forte e vingador, que luta com fé e paixão, e que jamais se curva diante dos desafios. Ser atleticano é um privilégio. E para quem ainda não entende essa paixão, basta assistir a um jogo com a Massa para sentir na pele o que significa ser parte dessa história.
-</p>
+            O Atlético Mineiro é mais do que futebol. É identidade, é resistência, é emoção. É o Galo forte e vingador, que luta com fé e paixão, e que jamais se curva diante dos desafios. Ser atleticano é um privilégio. E para quem ainda não entende essa paixão, basta assistir a um jogo com a Massa para sentir na pele o que significa ser parte dessa história.
+        </h2>
+        <p class="destaque">
+        <a id="importante">Atlético Mineiro: A Força que Move Minas e Encanta o Brasil
+
+            O Atlético Mineiro não é apenas um clube de futebol. É uma força cultural, social e emocional que molda identidades, inspira gerações e transforma paixão em história. Representante legítimo do orgulho mineiro, o Galo carrega mais do que tradição: carrega alma, garra e uma conexão inquebrantável com seu povo.
+        </a>
+        <br>Desde os seus primórdios, o Atlético assumiu uma postura de protagonismo e ousadia. Foi um dos pioneiros do futebol em Minas Gerais e nunca se acovardou diante dos gigantes do país. Ao contrário: se agigantou diante deles. A conquista da Copa Libertadores de 2013, marcada por viradas históricas, defesas milagrosas e uma fé inabalável, não foi apenas um título — foi uma afirmação de identidade, uma ode à perseverança.
+
+            O Galo é daqueles clubes que não se explica apenas com estatísticas. Ele se sente, se vive. É no olhar emocionado do torcedor, na vibração das arquibancadas, na entrega de cada jogador que se entende o que é ser Atlético. É lutar até o último minuto, não se render jamais e fazer da superação uma marca registrada.
+
+            O legado do Atlético também está nas camisas suadas de lendas como Éder, Tardelli, Victor, Reinaldo, Ronaldinho e tantos outros que deixaram suas marcas no gramado e no coração da Massa. Um clube que respeita seu passado, valoriza seu presente e trabalha com ambição para construir um futuro ainda mais vitorioso.
+
+            A inauguração da Arena MRV não é apenas a realização de um sonho antigo — é a prova de que o Galo continua crescendo, sem perder sua essência. Um templo moderno para uma fé que vem de longe. E cada passo dado é acompanhado de perto por uma torcida que, em número, paixão e lealdade, rivaliza com qualquer outra do mundo.
+
+            O Atlético Mineiro é mais do que um clube. É um símbolo de resistência, de paixão genuína, de compromisso com a vitória e com suas raízes. É o Galo — forte, altivo e vingador. Um gigante que orgulha Minas Gerais e comove o Brasil. Ser atleticano é carregar no peito um sentimento que não se explica. É simplesmente ser parte de algo eterno.
+        </p>
     </main>
 
     <footer>
