--- a/exercicio6/index.html
+++ b/exercicio6/index.html
@@ -7,8 +7,25 @@
     <title>Exercício 6</title>
 </head>
 <body>
+    <header>
+        <nav class="navbar">
+        <span class="logo">Minha Galeria</span>
+
+    
+        <input type="checkbox" id="menu-toggle" />
+        <label for="menu-toggle" class="hamburger">☰</label>
+
+        <ul class="nav-links">
+            <li><a href="https://menu.brendi.com.br/tw-burger-delivery-independencia/" target="_blank"">Início</a></li>
+            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#contato">Contato</a></li>
+        </ul>
+        </nav>
+    </header>
+
+
     <div class="galeria-container">
-  <div class="galeria-grid">
+    <div class="galeria-grid">
     <div class="item"><img src="images/001.png" alt="Imagem 1"><p>Bulbasaur</p></div>
     <div class="item"><img src="images/002.png" alt="Imagem 2"><p>Ivysaur</p></div>
     <div class="item"><img src="images/003.png" alt="Imagem 3"><p>Venusaur</p></div>
